--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
+    <header>ajhdjflaksjhadsjfh</header>
     <h1>LEARN GIT</h1>
+    <main>
+        <section>banner</section>
+    </main>
 </body>
 </html>
